# first_bevy_game

./: Cargo.toml  readme.md
assets/: enemy.aseprite
src/: '  bullet.rs  main.rs  player.rs  ui.rs
