[package]
name = "first_bevy_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev.package.bevy_rapier2d]
opt-level = 3

[dependencies]
bevy = "0.8.0"
rand = "0.7.3"
bevy_rapier2d = "0.16.2"
bevy_ecs_ldtk = "0.4"
bevy_ninepatch = "0.8.0"
